# falsegreen

./: .all-contributorsrc  .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  CUsersvinicDownloadssmellsextracted_2412.18989.txt  LICENSE  README.md  RELEASE.md  SECURITY.md  STATUS.md  VALIDATION.md  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codex-review-gate.yml  credential-reminder.yml  release.yml
docs/: guide.md
examples/: README.md  enable-optin.toml
examples/python/: conftest.py  test_c16_time_controlled.py  test_c22_async_liar.py  test_c48_dark_patch.py  test_diagnostic_codes.py  test_family_a_never_checks.py  test_family_b_weak_always_true.py  test_family_c_checks_own_setup.py  test_family_d_external_state.py  test_family_e_wrong_thing.py
research/: PROTOCOL.md  README.md  collect.py
research/data/: dataset-python.csv
skills/falsegreen/: README.md  SKILL.md  reference.md
skills/falsegreen/examples/: bad_tests_sample.py
skills/falsegreen/scripts/: scan.py
src/falsegreen/: __init__.py  hook_install.py  scanner.py
tests/: test_precision_corpus.py  test_scanner.py
