[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falsegreen"
version = "0.4.0"
description = "Find unit tests that give false positives: green tests that protect nothing, and tests that pass while asserting the wrong expected value."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Queiroz" }]
keywords = ["pytest", "testing", "test-smells", "false-positive", "static-analysis", "pre-commit", "code-quality", "ai-generated-tests"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/vinicq/falsegreen"
Issues = "https://github.com/vinicq/falsegreen/issues"

[project.scripts]
falsegreen = "falsegreen.scanner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/falsegreen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
